paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c3/sample_005/target.compile.log
error[E0597]: `a` does not live long enough
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c3/sample_005/target.rs:27:17
   |
 3 |         type_id_inner(&$x)
   |         ------------------ argument requires that `a` is borrowed for `'static`
...
22 |     let a: [i32; 3] = [10, 20, 30];
   |         - binding `a` declared here
...
27 |     if TYPE_ID!(&a) != 2 {
   |                 ^^ borrowed value does not live long enough
...
66 | }
   | - `a` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.